# tournament-scheduler

./: --full-page  .gitignore  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  justfile  pyproject.toml
demo/api/: main.py
deploy/: modal_app.py
docs/: DECISIONS.md  DESIGN.md
evals/: __init__.py  runner.py  scoring.py
evals/briefs/b01_clean_small/: brief.yaml  golden_spec.yaml
evals/briefs/b02_clean_medium/: brief.yaml  golden_spec.yaml
evals/briefs/b03_rambling_voice/: brief.yaml  golden_spec.yaml
evals/briefs/b04_missing_dates/: brief.yaml  (+1 more)
evals/results/: 20260709T190346Z_claude-opus-4-8.json  20260709T191431Z_claude-opus-4-8.json  20260709T192217Z_claude-opus-4-8.json  20260709T192609Z_claude-opus-4-8.json
examples/: large_tournament.yaml  medium_tournament.yaml  small_tournament.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  dom.ts  main.ts  state.ts  styles.css  types.ts  ws.ts
tests/: test_chat_stream.py  test_conflict.py  test_corpus.py  test_eval_runner.py  test_explain.py  test_fake_e2e.py  test_import_boundaries.py  test_models.py  test_pools.py  test_pydantic_ai_provider.py  test_renderer.py  test_scoring.py  test_session.py  test_solver.py  test_spec_io.py  test_tools.py  test_web.py
tournament_scheduler/: __init__.py  cli.py  conflict.py  fixtures.py  intake.py  models.py  pools.py  renderer.py  solver.py  spec_io.py  validator.py
tourneydesk/: __init__.py  cli.py  persona.py  prompts.py  session.py  tools.py
tourneydesk/core/: __init__.py  service.py  speculative.py
tourneydesk/explain/: __init__.py  __main__.py  engine.py  models.py  prompts.py
tourneydesk/providers/: __init__.py  agent_sdk.py  base.py  claude.py  fake.py  pydantic_ai.py
tourneydesk/web/: __init__.py  app.py  canned.py  manager.py  schedule_view.py  store.py
(+31 files in other folders)
