[project]
name = "tournament-scheduler"
version = "0.1.0"
description = "OR-Tools CP-SAT scheduling engine for youth sports tournaments"
authors = [
    { name = "Evan Oman", email = "evan058@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
keywords = ["tournament", "scheduling", "or-tools", "constraint-programming", "sports"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "ortools>=9.10,<9.13",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "anthropic>=0.112.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["tournament_scheduler", "tourneydesk"]

[project.scripts]
tournament-scheduler = "tournament_scheduler.cli:main"
tourneydesk = "tourneydesk.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["tests/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tournament_scheduler --cov-report=term-missing"
